--- a/i3/config
+++ b/i3/config
@@ -126,7 +126,7 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "~/.i3/exit_terminal.sh"
+bindsym $mod+Shift+e exec "/home/lorian/Dropbox/dotfiles/i3/exit_terminal.sh"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
