--- a/i3/config
+++ b/i3/config
@@ -41,11 +41,11 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec rofi -show run -run-shell-command "{terminal} -e 'zsh -i -c {cmd}'"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
- bindsym $mod+shift+d exec i3-dmenu-desktop
+ bindsym $mod+shift+d exec i3-dmenu-desktop --dmenu="rofi -dmenu"
 
 # change focus
 bindsym $mod+j focus left
@@ -181,7 +181,7 @@ bindsym Mod4+F6 exec "brightness +"
 
 bindsym Mod4+L exec $confpath/lock.sh
 
-bindsym $mod+Shift+F exec quickswitch.py -d "dmenu -i -l 20"
+bindsym $mod+Shift+F exec rofi -show window
 bindsym $mod+B exec "chrome"
 
 bindcode 248 exec $confpath/start_arandr.py
@@ -189,15 +189,13 @@ bindcode 248 exec $confpath/start_arandr.py
 bindsym $mod+Shift+N exec nautilus
 
 
-#font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-font pango:DejaVu Sans Mono 10
-#font pango:Monospace 10
+font pango:DejaVu Sans Mono 9
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
 	status_command python3 $confpath/i3statusconf.py
-    font pango:Monospace 10
+    font pango:DejaVu Sans Mono 9
 	colors {
 		separator #666666
 		background #222222
@@ -222,11 +220,11 @@ for_window [instance="truecrypt"] floating enable
 for_window [instance="lxappearance"] floating enable
 for_window [instance="gnome-terminal"] border pixel 1
 for_window [instance="gnome-terminal" title="Editing Profile .*"] border normal
-for_window [title="Quit i3"] floating enable border none
 for_window [class="(T|t)elegram"] border none
 for_window [title="Authenticate"] border none
 for_window [class="Photoshop.exe"] border none
 for_window [class="Termite"] border pixel 1
+for_window [title="Quit i3"] floating enable border none
 assign [class="Telegram"] $1
 #assign [class="(google-chrome)|(Chrome)"] $2
 
