--- a/termite/config
+++ b/termite/config
@@ -1,2 +1,6 @@
 [options]
-font = DejaVu Sans Mono for Powerline 11
+    font = DejaVu Sans Mono for Powerline 9
+
+
+#[colors]
+    #background = rgba(24, 24, 24, 0.9)
