--- a/i3/config
+++ b/i3/config
@@ -171,15 +171,21 @@ bindsym XF86AudioRaiseVolume exec $confpath/sound up
 bindsym XF86AudioLowerVolume exec $confpath/sound down
 bindsym XF86AudioMute exec $confpath/sound mute
 
-#bindsym XF86KbdBrightnessDown exec ~/.i3/keyboard_backlight down
-#bindsym XF86KbdBrightnessUp exec ~/.i3/keyboard_backlight up
+# Media player controls
+bindsym XF86AudioPlay exec playerctl play
+bindsym XF86AudioPause exec playerctl pause
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPrev exec playerctl previous
+
+bindsym XF86KbdBrightnessDown exec asus-kbd-backlight down
+bindsym XF86KbdBrightnessUp exec asus-kbd-backlight up
 
 bindsym $mod+C exec "nm-connection-editor"
 
 bindsym Mod4+F5 exec "brightness -"
 bindsym Mod4+F6 exec "brightness +"
 
-bindsym Ctrl+Alt+L exec $confpath/lock.sh
+bindsym Ctrl+Mod1+L exec $confpath/lock.sh
 
 bindsym $mod+Shift+F exec rofi -show window
 bindsym $mod+Shift+S exec $confpath/rofi_ssh.sh
