--- a/i3/config
+++ b/i3/config
@@ -180,7 +180,7 @@ bindsym XF86AudioPrev exec playerctl previous
 bindsym XF86KbdBrightnessDown exec asus-kbd-backlight down
 bindsym XF86KbdBrightnessUp exec asus-kbd-backlight up
 
-bindsym $mod+C exec "nm-connection-editor"
+bindsym $mod+C exec "nmcli_dmenu"
 
 bindsym Mod4+F5 exec "brightness -"
 bindsym Mod4+F6 exec "brightness +"
