--- a/i3/config
+++ b/i3/config
@@ -230,7 +230,7 @@ for_window [title="Quit i3"] floating enable border none
 assign [class="Telegram"] $1
 
 
-exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1
+exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id /usr/lib/notification-daemon-1.0/notification-daemon
 exec --no-startup-id $confpath/setup_background.sh
 exec --no-startup-id xautolock -time 15 -locker "$confpath/lock.sh"
@@ -239,7 +239,7 @@ exec --no-startup-id dropbox
 exec --no-startup-id redshift-gtk
 exec --no-startup-id volnoti
 #exec compton --vsync opengl
-exec --no-startup-id i3-msg 'workspace $1; exec telegram; workspace $2; exec chrome'
+exec --no-startup-id i3-msg 'workspace $1; exec telegram-desktop; workspace $2; exec chrome'
 
 client.focused #0088CC #0088CC #ffffff #dddddd
 client.focused_inactive #333333 #333333 #888888 #292d2e
