--- a/i3/config
+++ b/i3/config
@@ -40,12 +40,12 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show run -run-shell-command "{terminal} -e 'zsh -i -c {cmd}'"
+bindsym $mod+d exec --no-startup-id rofi -show run -run-shell-command "{terminal} -e 'zsh -i -c {cmd}'"
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
- bindsym $mod+shift+d exec i3-dmenu-desktop --dmenu="rofi -i -dmenu"
+ bindsym $mod+shift+d exec --no-startup-id i3-dmenu-desktop --dmenu="rofi -i -dmenu"
 
 # change focus
 bindsym $mod+j focus left
@@ -167,28 +167,28 @@ bindsym $mod+r mode "resize"
 bindsym $mod+p focus parent
 bindsym $mod+a focus child
 
-bindsym XF86AudioRaiseVolume exec $confpath/sound up
-bindsym XF86AudioLowerVolume exec $confpath/sound down
-bindsym XF86AudioMute exec $confpath/sound mute
+bindsym XF86AudioRaiseVolume exec --no-startup-id $confpath/sound up
+bindsym XF86AudioLowerVolume exec --no-startup-id $confpath/sound down
+bindsym XF86AudioMute exec --no-startup-id $confpath/sound mute
 
 # Media player controls
-bindsym XF86AudioPlay exec playerctl play
-bindsym XF86AudioPause exec playerctl pause
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
+bindsym XF86AudioPlay exec --no-startup-id playerctl play
+bindsym XF86AudioPause exec --no-startup-id playerctl pause
+bindsym XF86AudioNext exec --no-startup-id playerctl next
+bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 
-bindsym XF86KbdBrightnessDown exec asus-kbd-backlight down
-bindsym XF86KbdBrightnessUp exec asus-kbd-backlight up
+bindsym XF86KbdBrightnessDown exec --no-startup-id asus-kbd-backlight down
+bindsym XF86KbdBrightnessUp exec --no-startup-id asus-kbd-backlight up
 
-bindsym $mod+C exec "nmcli_dmenu"
+bindsym $mod+C exec --no-startup-id "nmcli_dmenu"
 
-bindsym Mod4+F5 exec "brightness -"
-bindsym Mod4+F6 exec "brightness +"
+bindsym Mod4+F5 exec --no-startup-id "brightness -"
+bindsym Mod4+F6 exec --no-startup-id "brightness +"
 
 bindsym Ctrl+Mod1+L exec $confpath/lock.sh
 
-bindsym $mod+Shift+F exec rofi -show window
-bindsym $mod+Shift+S exec $confpath/rofi_ssh.sh
+bindsym $mod+Shift+F exec --no-startup-id rofi -show window
+bindsym $mod+Shift+S exec --no-startup-id $confpath/rofi_ssh.sh
 bindsym $mod+B exec "chrome"
 
 bindcode 248 exec $confpath/start_arandr.py
@@ -219,7 +219,7 @@ for_window [instance="truecrypt"] floating enable
 for_window [instance="lxappearance"] floating enable
 for_window [instance="gnome-terminal"] border pixel 1
 for_window [instance="gnome-terminal" title="Editing Profile .*"] border normal
-for_window [class="(T|t)elegram"] border none
+for_window [class="(T|t)elegram" title="Telegram"] border none
 for_window [title="^Authenticate$"] border none
 for_window [class="Photoshop.exe"] border none
 for_window [class="Tk" title="Figure.*"] floating enable
