Fixed tray output

--- a/i3/config
+++ b/i3/config
@@ -212,6 +212,8 @@ bar {
         inactive_workspace #333333 #333333 #888888
         urgent_workspace #2f343a #900000 #ffffff
     }
+    tray_output DVI-I-1
+    tray_output eDP1
 }
 
 for_window [title="Guake!"] floating enable
