--- a/i3/config
+++ b/i3/config
@@ -191,7 +191,7 @@ bindsym $mod+C exec --no-startup-id "networkmanager_dmenu"
 bindsym Mod4+F5 exec --no-startup-id "brightness -"
 bindsym Mod4+F6 exec --no-startup-id "brightness +"
 
-bindsym Ctrl+Mod1+L exec $confpath/lock.sh
+bindsym Ctrl+Mod1+L exec physlock
 
 bindsym $mod+Shift+F exec --no-startup-id rofi -show window
 bindsym $mod+Shift+S exec --no-startup-id $confpath/rofi_ssh.sh
@@ -242,7 +242,7 @@ assign [class="Pdfpc" window_role="presentation"] "pdfpc-presentation"
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id /usr/lib/notification-daemon-1.0/notification-daemon
 exec --no-startup-id $confpath/setup_background.sh
-exec --no-startup-id xautolock -time 15 -locker "$confpath/lock.sh"
+exec --no-startup-id xautolock -time 15 -locker physlock
 exec --no-startup-id nm-applet
 exec --no-startup-id dropbox
 exec --no-startup-id redshift-gtk
