--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "snippets"]
 	path = snippets
 	url = git@github.com:MaicoTimmerman/snippets.git
+[submodule "zsh-git-prompt"]
+	path = zsh-git-prompt
+	url = git@github.com:olivierverdier/zsh-git-prompt.git
