--- a/i3/requirements.txt
+++ b/i3/requirements.txt
@@ -4,6 +4,7 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
+basiciw==0.2.2
 colour==0.1.5
 enum-compat==0.0.2        # via i3ipc
 fontawesome==4.7.0.post5
