Update sslrv host

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -29,7 +29,7 @@ Host ssldockerdev
     HostName develop.sslleiden.nl
     User lorian
 Host sslrv
-    HostName kantoor.sslleiden.nl
+    HostName 192.168.178.167
     User lorian
 Host router
     HostName 192.168.1.1
