Update SSH config

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -22,14 +22,8 @@ Host desktop
     HostName loriancoltof.nl
     User lorian
     Port 2222
-Host ssldocker
-    HostName testdocker.sslleiden.nl
-    User lorian
-Host ssldockerdev
-    HostName develop.sslleiden.nl
-    User lorian
 Host sslrv
-    HostName 192.168.178.167
+    HostName kantoor.sslleiden.nl
     User lorian
 Host router
     HostName 192.168.1.1
@@ -37,5 +31,8 @@ Host router
 Host lisa
     HostName lisa-gpu.surfsara.nl
     User lcoltof
+Host mlflow
+    HostName mlflow.loriancoltof.nl
+    User lorian
 
 # vim: ft=sshconfig
