--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -34,5 +34,8 @@ Host lisa
 Host mlflow
     HostName mlflow.loriancoltof.nl
     User lorian
+host ssl-windows
+    HostName 192.168.178.64
+    User "Vaste medewerker"
 
 # vim: ft=sshconfig
