Update SSH config

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -19,11 +19,14 @@ Host nasvm
     User coltof
     Port 2223
 Host desktop
-    HostName loriancoltof.nl
+    HostName 192.168.1.2
     User lorian
-    Port 2222
-Host sslrv
+    StrictHostKeyChecking no
+Host sslrv-ext
     HostName kantoor.sslleiden.nl
+    User lorian
+Host sslrv-int
+    HostName 192.168.178.167
     User lorian
 Host router
     HostName 192.168.1.1
