Add new Windows hosts to SSH config

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -37,8 +37,14 @@ Host lisa
 Host mlflow
     HostName mlflow.loriancoltof.nl
     User lorian
-host ssl-windows
+Host ssl-windows-kamer7l
+    HostName 192.168.178.63
+    User "Vaste medewerker"
+Host ssl-windows-kamer7r
     HostName 192.168.178.64
+    User "Vaste medewerker"
+Host ssl-windows-kamer6
+    HostName 192.168.178.66
     User "Vaste medewerker"
 
 # vim: ft=sshconfig
